Use Set.of()